<resources>
    <string name="app_name">Railway reservation</string>
    <string name="railway_name">Haraka Railway Booking</string>
    <string name="inf">if dont have an account create one!!!</string>
    <string name="new_ac">CREATE ACCOUNT</string>
    <string name="log_in">LogIn</string>
    <string name="p_ss">PASSWORD</string>
    <string name="use_">EMAIL</string>
    <string name="name">NAME</string>
    <string name="e_pass">ENTER PASSWORD</string>
    <string name="email">ENTER EMAIL</string>
    <string name="acc">ACCOUNT SETUP</string>
    <string name="sup">SIGN UP</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="activity">Activity</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="i_have_already_sign_up">I have already sign up</string>
    <string name="lo_g">Log In</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="reset">Reset</string>
    <string name="cancell">Cancell</string>
    <string name="booking_area">booking area</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_your_id_number">Enter Your ID Number</string>
    <string name="one_passanger">One_Passanger</string>
    <string name="two_passanger">Two_Passanger</string>
    <string name="date">DATE</string>
    <string name="dateview">Date selected</string>
    <string name="todo">TODO</string>
    <string name="mpesa">TODO</string>
    <string name="please_pay_for_the_ticket">Please pay for the ticket</string>
    <string name="enter_the_amount">Enter the Amount</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="confirm">confirm</string>
    <string name="welcome_to_harraka_booking_app">Welcome to Harraka booking app</string>
    <string name="till_number_is_44033">Till number is: 44033</string>
    <string name="entert_till_number">Entert Till Number</string>
    <string name="enter_payment_amount">Enter payment amount</string>


    <string-array name="Destination_and_Prices">
        <item> Nairobi-Mombasa(1000ksh) </item>

        <item> Nairobi-Eldoret(500ksh) </item>

        <item> Nairobi-Nakuru(300ksh) </item>

        <item> Nakuru-Kisumu(700ksh) </item>


    </string-array>


</resources>
