<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/acc"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="200dp"
            android:layout_height="46dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:background="#D8CBCB"
            android:hint="@string/name"
            android:textColorHint="@color/colorAccent"
            android:inputType="text" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#D8CBCB"
            android:hint="@string/email"
            android:textColorHint="@color/colorAccent"
            tools:ignore="TextFields"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/user_password"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="#D8CBCB"
            android:hint="@string/e_pass"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/sup"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:text="@string/i_have_already_sign_up"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_View"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="230dp"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:onClick="clickHandler"
                android:text="@string/lo_g"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:focusable="true" />


        </RelativeLayout>

    </LinearLayout>


</ScrollView>
