<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ergroproxy.harakarailway.booking">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:background="@drawable/wall2">

        <TextView
            android:id="@+id/book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="20dp"
            android:text="@string/booking_area"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/Fname"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="#D8CBCB"
            android:hint="@string/enter_first_name"
            android:inputType="text"
            android:textColorHint="@color/colorAccent"
            android:textSize="14sp"
            tools:ignore="TextFields" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Lname"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:background="#D8CBCB"
                android:hint="@string/enter_last_name"
                android:inputType="text"
                android:textColorHint="@color/colorAccent"
                android:textSize="14sp"
                tools:ignore="TextFields" />


            <EditText
                android:id="@+id/IDNO"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="180dp"
                android:background="#D8CBCB"
                android:hint="@string/enter_your_id_number"
                android:inputType="numberSigned"
                android:textColorHint="@color/colorAccent"
                android:textSize="14sp"
                tools:ignore="TextFields" />

        </RelativeLayout>


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            tools:layout_editor_absoluteX="6dp"

            tools:layout_editor_absoluteY="38dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="20dp">

            <RadioButton
             android:id="@+id/radio1"
             android:layout_width="150dp"
             android:layout_height="30dp"
             android:text="@string/one_passanger"
             android:textColor="@color/colorAccent"
             android:textSize="14sp"
             android:textStyle="italic" />




            <Button
                android:id="@+id/Dbutton"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="80dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/radio1"
                android:text="@string/date"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:layout_below="@+id/Dbutton"
                android:layout_marginStart="170dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="12sp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp">

            <ImageButton
                android:id="@+id/m_pesa"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:layout_marginStart="240dp"
                android:contentDescription="@string/mpesa"
                android:src="@drawable/mpesa" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/please_pay_for_the_ticket"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textAlignment="textStart"/>

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp">


            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:text="@string/reset"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="41dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="30dp"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:text="@string/cancell"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="41dp" />

            <Button
                android:id="@+id/confirmationb"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="270dp"
                android:layout_marginTop="30dp"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:text="@string/confirm"
                android:onClick="clickHandler"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="41dp"
                tools:ignore="OnClick" />

        </RelativeLayout>

    </LinearLayout>


</ScrollView>
