<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ergroproxy.harakarailway.Signin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/railway_name"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/train_">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/e_mail"
            android:layout_width="350dp"
            android:layout_height="54dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#D8CBCB"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/user_2"
            android:hint="@string/use_"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/pas_word"
            android:layout_width="350dp"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#D8CBCB"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/lock_2"
            android:hint="@string/p_ss"
            android:inputType="textPassword"
            android:maxLength="16"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonstyle"
            android:drawableEnd="@drawable/logi_"
            android:drawablePadding="10dp"
            android:text="@string/log_in"
            android:textColor="#ffffff"
            android:textSize="16sp" />


        <Button
            android:id="@+id/account_button"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/new_ac"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</LinearLayout>